[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/ponderosa.regular2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/UI/ProfilePanel.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[node name="ProfilePanel" type="Container"]
anchor_right = 1.0
anchor_bottom = 0.1
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -823, -368 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0784314, 0.0627451, 0.0627451, 0.505882 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Left1" type="HBoxContainer" parent="HBoxContainer"]
margin_top = 43.0
margin_right = 278.0
margin_bottom = 64.0
grow_vertical = 0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 2

[node name="RankLabel" type="Label" parent="HBoxContainer/Left1"]
margin_left = 246.0
margin_right = 278.0
margin_bottom = 21.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "1:"
align = 2
valign = 1

[node name="Left2" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 282.0
margin_top = 43.0
margin_right = 1297.0
margin_bottom = 64.0
grow_vertical = 0
rect_min_size = Vector2( 1015, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label" type="Label" parent="HBoxContainer/Left2"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 17.0
text = "        "

[node name="PlayerNameLabel" type="Label" parent="HBoxContainer/Left2"]
margin_left = 36.0
margin_right = 212.0
margin_bottom = 21.0
size_flags_horizontal = 0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Player name"
valign = 1

[node name="Right1" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 1301.0
margin_top = 43.0
margin_right = 1580.0
margin_bottom = 64.0
grow_vertical = 0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 2

[node name="LevelLabel" type="Label" parent="HBoxContainer/Right1"]
margin_left = 179.0
margin_right = 279.0
margin_bottom = 21.0
grow_vertical = 0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "2137"
align = 2
valign = 1

[node name="Right2" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 1584.0
margin_top = 43.0
margin_right = 1920.0
margin_bottom = 64.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Label2" type="Label" parent="HBoxContainer/Right2"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 17.0
text = "        "

[node name="TotalWinRatioLabel" type="Label" parent="HBoxContainer/Right2"]
margin_left = 36.0
margin_right = 336.0
margin_bottom = 21.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 0
size_flags_vertical = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "58proc."
valign = 1
